<resources>
    <string name="app_name">Sri Lanka VoteStream</string>
    <string name="main_page_title">Parliamentary Election 2024</string>
    <string name="add_results_page_entry">Add Results</string>
    <string name="view_results_page_entry">View Results</string>
    <string name="latest_results_page_entry">Latest Released</string>
    <string name="district">Electoral District</string>
    <string name="polling_division">Polling Division</string>
    <string name="votes_count">Votes</string>
    <string name="party_1">Party 1</string>
    <string name="party_2">Party 2</string>
    <string name="party_3">Party 3</string>
    <string name="party_4">Party 4</string>
    <string name="party_5">Party 5</string>
    <string name="valid_votes">Valid Votes</string>
    <string name="polled_votes">Polled Votes</string>
    <string name="registered_votes">Registered Votes</string>
    <string name="number_of_electors">Electors</string>
    <string name="save_entry">Save Entry</string>
    <string name="view_result">View Result</string>
    <string name="testing_district">Colombo District</string>
    <string name="testing_polling_division">District Result</string>
    <string name="testing_party_1">NEW DEMOCRATIC FRONT</string>
    <string name="testing_party_2">SRI LANKA PODUJANA PERAMUNA</string>
    <string name="testing_party_3">ILANKAI TAMIL ARASU KACHCHI</string>
    <string name="testing_votes_1">2,235,000</string>
    <string name="testing_votes_2">35,000</string>
    <string name="testing_votes_3">5,000</string>
    <string name="testing_percentage_1">45.23%</string>
    <string name="testing_percentage_2">27.67%</string>
    <string name="testing_percentage_3">19.06%</string>
    <string name="dash">-</string>
    <string name="latest_released">Latest Released</string>
    <string name="overall_result">National Total</string>
    <string name="district_result">District Results</string>
    <string name="polling_division_result">Polling Division Results</string>
    <string name="add_result">Add Entry</string>
</resources>