<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="24dp"
    android:background="@drawable/text_view_votes_background"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textViewSectionName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/valid_votes"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black" />

    <TextView
        android:id="@+id/textViewVotes"
        android:layout_width="64dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="4dp"
        android:gravity="center_vertical|end"
        android:text="@string/testing_votes_1"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black" />

    <TextView
        android:id="@+id/textViewVotesPercentage"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="3dp"
        android:gravity="center_vertical|end"
        android:text="@string/testing_percentage_1"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>