<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/app_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="145dp"
        android:layout_height="68dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sri_lanka_flag" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/text_view_background_title"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/main_page_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/btnLatestResults"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/main_view_button_style"
            android:fontFamily="sans-serif-black"
            android:text="@string/latest_results_page_entry"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnPollingDivisionResult"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/main_view_button_style"
            android:fontFamily="sans-serif-black"
            android:text="@string/polling_division_result"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDistrictResult"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/main_view_button_style"
            android:fontFamily="sans-serif-black"
            android:text="@string/district_result"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnOverallResult"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/main_view_button_style"
            android:fontFamily="sans-serif-black"
            android:text="@string/overall_result"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnAddResults"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/main_view_button_style"
            android:fontFamily="sans-serif-black"
            android:text="@string/add_result"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>