<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddResultsActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/app_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/text_view_background_title"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/main_page_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeader"
        tools:layout_editor_absoluteX="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_view_background_sub_title"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:text="@string/district"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerElectoralDistrict"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background_sub_title"
                android:paddingStart="4dp"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_view_background_sub_title"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:text="@string/polling_division"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerPollingDivision"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background_sub_title"
                android:paddingStart="4dp"
                android:prompt="@string/polling_division"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerParty1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/text_view_background_sub_title"
                android:prompt="@string/party_1"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextParty1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/edit_text_background_sub_title"
                android:hint="@string/votes_count"
                android:inputType="numberDecimal"
                android:paddingStart="4dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerParty2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/text_view_background_sub_title"
                android:prompt="@string/party_2"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextParty2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/edit_text_background_sub_title"
                android:hint="@string/votes_count"
                android:inputType="numberDecimal"
                android:paddingStart="4dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerParty3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/text_view_background_sub_title"
                android:prompt="@string/party_3"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextParty3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/edit_text_background_sub_title"
                android:hint="@string/votes_count"
                android:inputType="numberDecimal"
                android:paddingStart="4dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerParty4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/text_view_background_sub_title"
                android:prompt="@string/party_4"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextParty4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/edit_text_background_sub_title"
                android:hint="@string/votes_count"
                android:inputType="numberDecimal"
                android:paddingStart="4dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerParty5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/text_view_background_sub_title"
                android:prompt="@string/party_4"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextParty5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/edit_text_background_sub_title"
                android:hint="@string/votes_count"
                android:inputType="numberDecimal"
                android:paddingStart="4dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/text_view_background_sub_title"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:text="@string/valid_votes"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextValidVotes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/edit_text_background_sub_title"
                android:hint="@string/valid_votes"
                android:inputType="numberDecimal"
                android:paddingStart="4dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/text_view_background_sub_title"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:text="@string/polled_votes"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextPolledVotes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/edit_text_background_sub_title"
                android:hint="@string/polled_votes"
                android:inputType="numberDecimal"
                android:paddingStart="4dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/text_view_background_sub_title"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:text="@string/registered_votes"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextRegisteredVotes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/edit_text_background_sub_title"
                android:hint="@string/registered_votes"
                android:inputType="numberDecimal"
                android:paddingStart="4dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/main_view_button_style"
        android:text="@string/save_entry"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>